# genai-article-processor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  utils.py
.devcontainer/: devcontainer.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
artifacts/inputs/: Muenchen-award-profile-1.xml  article.xml
modules/: agent.py  ai_processor.py  data_saver.py  html_generator.py  html_processor.py  image_processor.py  prompt_manager.py  xml_parser.py
tests/: test_main.py
